Big update on the MVP
